# agent-system

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: capabilities.yaml  models.yaml  task_profiles.yaml
config/repos/: agent-system.yaml  lab.yaml
docs/: ai-model-selector-contract-prompt.md  setup-guide.md
scripts/: smoke_model_router.py  smoke_model_services.py  smoke_runtime.py  system_reset.py
src/ticket_agent/: __init__.py  app.py  e2e_smoke.py  runtime_smoke.py
src/ticket_agent/config/: repo_contract.py
src/ticket_agent/detection/: __init__.py  detector.py  jira_search.py  ownership.py
src/ticket_agent/domain/: errors.py  execution.py  git.py  intake.py  model.py  model_router.py  model_selection.py
tests/unit/: test_app_runtime.py  test_detection_component.py  test_execution_approval.py  test_execution_pickup_fake_path.py  test_execution_worker.py  test_file_adapter.py  test_git_adapter.py  test_graph_real_services_integration.py  test_intake_approval_flow.py  test_intake_integration.py  test_intake_intent_resolver.py  test_intake_jira_writer.py  test_intake_model_proposal_generator.py  test_intake_proposal_store.py  test_intake_question_answerer.py  test_intake_slack_listener.py  test_jira_detection_search.py  test_jira_execution_coordinator.py  test_jira_execution_fake_path.py  test_jira_execution_service.py  test_jira_rest_client.py  test_jira_services.py  test_jira_work_item_loader.py  test_lock_reconciler.py  test_model_router.py  test_model_services.py  test_orchestrator_git_service.py  test_orchestrator_implementation_service.py  test_orchestrator_jira_services.py  test_orchestrator_runner.py  test_orchestrator_service_impls.py  test_ownership_checker.py  test_providers.py  test_pyproject_metadata.py  test_repo_context.py  test_repo_contract.py  test_router_factory.py  test_runtime_smoke.py  test_selector_config.py  test_shell_adapter.py  (+8 more)
(+59 files in other folders)
