[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-agent"
version = "0.1.0"
description = "Slack-first, Jira-backed agent execution system."
requires-python = ">=3.12"
dependencies = [
  "ai-model-selector @ git+https://github.com/JonathanGuardado/ai-model-selector.git",
  "httpx>=0.27.0",
  "langgraph>=1.0.0,<2.0.0",
  "pydantic>=2.7.4",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
